renaming files WIP

--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -64,34 +64,34 @@
     <ClInclude Include="..\src\components\RenderableComponent.h" />
     <ClInclude Include="..\src\components\WeaponComponent.h" />
     <ClInclude Include="..\src\components\WeaponPickupComponent.h" />
-    <ClInclude Include="..\src\engine\graphics_engine.h" />
-    <ClInclude Include="..\src\engine\graphics_entitiy.h" />
-    <ClInclude Include="..\src\engine\sound_engine.h" />
-    <ClInclude Include="..\src\engine\sprite.h" />
-    <ClInclude Include="..\src\engine\text.h" />
-    <ClInclude Include="..\src\entities\entities_factory.h" />
-    <ClInclude Include="..\src\entities\entity.h" />
+    <ClInclude Include="..\src\engine\GraphicEngine.h" />
+    <ClInclude Include="..\src\engine\GraphicEntity.h" />
+    <ClInclude Include="..\src\engine\SoundEngine.h" />
+    <ClInclude Include="..\src\engine\Sprite.h" />
+    <ClInclude Include="..\src\engine\Text.h" />
+    <ClInclude Include="..\src\entities\EntitiesFactory.h" />
+    <ClInclude Include="..\src\entities\Entity.h" />
     <ClInclude Include="..\src\globals.h" />
-    <ClInclude Include="..\src\gui\controls\button.h" />
-    <ClInclude Include="..\src\gui\controls\checkbox.h" />
-    <ClInclude Include="..\src\gui\controls\control.h" />
-    <ClInclude Include="..\src\gui\controls\label.h" />
-    <ClInclude Include="..\src\gui\controls\menu.h" />
-    <ClInclude Include="..\src\gui\controls\slider.h" />
-    <ClInclude Include="..\src\gui\menu_manager.h" />
-    <ClInclude Include="..\src\gui\string_manager.h" />
-    <ClInclude Include="..\src\input\iinput_manager.h" />
-    <ClInclude Include="..\src\input\input_manager.h" />
-    <ClInclude Include="..\src\messages\message.h" />
+    <ClInclude Include="..\src\gui\controls\Button.h" />
+    <ClInclude Include="..\src\gui\controls\Checkbox.h" />
+    <ClInclude Include="..\src\gui\controls\Control.h" />
+    <ClInclude Include="..\src\gui\controls\Label.h" />
+    <ClInclude Include="..\src\gui\controls\Menu.h" />
+    <ClInclude Include="..\src\gui\controls\Slider.h" />
+    <ClInclude Include="..\src\gui\MenuManager.h" />
+    <ClInclude Include="..\src\gui\StringManager.h" />
+    <ClInclude Include="..\src\input\IInputManager.h" />
+    <ClInclude Include="..\src\input\InputManager.h" />
+    <ClInclude Include="..\src\messages\Message.h" />
     <ClInclude Include="..\src\REG_BEHAVIORS.h" />
     <ClInclude Include="..\src\REG_ENEMIES.h" />
     <ClInclude Include="..\src\REG_ENTITIES.h" />
     <ClInclude Include="..\src\REG_WEAPONS.h" />
-    <ClInclude Include="..\src\scenes\game_scene.h" />
-    <ClInclude Include="..\src\scenes\menu_scene.h" />
-    <ClInclude Include="..\src\scenes\scene.h" />
-    <ClInclude Include="..\src\scenes\scene_manager.h" />
-    <ClInclude Include="..\src\scenes\world.h" />
+    <ClInclude Include="..\src\scenes\GameScene.h" />
+    <ClInclude Include="..\src\scenes\IScene.h" />
+    <ClInclude Include="..\src\scenes\MenuScene.h" />
+    <ClInclude Include="..\src\scenes\SceneManager.h" />
+    <ClInclude Include="..\src\scenes\World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\lib\ppk_assert\ppk_assert.cpp" />
@@ -142,26 +142,26 @@
     <ClCompile Include="..\src\components\RenderableComponent.cpp" />
     <ClCompile Include="..\src\components\WeaponComponent.cpp" />
     <ClCompile Include="..\src\components\WeaponPickupComponent.cpp" />
-    <ClCompile Include="..\src\engine\graphics_engine.cpp" />
-    <ClCompile Include="..\src\engine\graphics_entity.cpp" />
-    <ClCompile Include="..\src\engine\sound_engine.cpp" />
-    <ClCompile Include="..\src\engine\sprite.cpp" />
-    <ClCompile Include="..\src\engine\text.cpp" />
-    <ClCompile Include="..\src\entities\entities_factory.cpp" />
-    <ClCompile Include="..\src\entities\entity.cpp" />
-    <ClCompile Include="..\src\gui\controls\button.cpp" />
-    <ClCompile Include="..\src\gui\controls\checkbox.cpp" />
-    <ClCompile Include="..\src\gui\controls\label.cpp" />
-    <ClCompile Include="..\src\gui\controls\menu.cpp" />
-    <ClCompile Include="..\src\gui\controls\slider.cpp" />
-    <ClCompile Include="..\src\gui\menu_manager.cpp" />
-    <ClCompile Include="..\src\gui\string_manager.cpp" />
-    <ClCompile Include="..\src\input\input_manager.cpp" />
+    <ClCompile Include="..\src\engine\GraphicEngine.cpp" />
+    <ClCompile Include="..\src\engine\GraphicEntity.cpp" />
+    <ClCompile Include="..\src\engine\SoundEngine.cpp" />
+    <ClCompile Include="..\src\engine\Sprite.cpp" />
+    <ClCompile Include="..\src\engine\Text.cpp" />
+    <ClCompile Include="..\src\entities\EntitiesFactory.cpp" />
+    <ClCompile Include="..\src\entities\Entity.cpp" />
+    <ClCompile Include="..\src\gui\controls\Button.cpp" />
+    <ClCompile Include="..\src\gui\controls\Checkbox.cpp" />
+    <ClCompile Include="..\src\gui\controls\Label.cpp" />
+    <ClCompile Include="..\src\gui\controls\Menu.cpp" />
+    <ClCompile Include="..\src\gui\controls\Slider.cpp" />
+    <ClCompile Include="..\src\gui\MenuManager.cpp" />
+    <ClCompile Include="..\src\gui\StringManager.cpp" />
+    <ClCompile Include="..\src\input\InputManager.cpp" />
     <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\scenes\game_scene.cpp" />
-    <ClCompile Include="..\src\scenes\menu_scene.cpp" />
-    <ClCompile Include="..\src\scenes\scene_manager.cpp" />
-    <ClCompile Include="..\src\scenes\world.cpp" />
+    <ClCompile Include="..\src\scenes\GameScene.cpp" />
+    <ClCompile Include="..\src\scenes\MenuScene.cpp" />
+    <ClCompile Include="..\src\scenes\SceneManager.cpp" />
+    <ClCompile Include="..\src\scenes\World.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0EB618-AC99-4DFE-A4E1-534AD384C3A1}</ProjectGuid>
