EntitiesFactory cleanup WIP

--- a/data/config/config.json
+++ b/data/config/config.json
@@ -1,223 +1,238 @@
 {
-	"weapons": [
-	{
-		"name": "revolver",
-		"fireRate": 0.3,
-		"reloadTime": 1.0,
-		"maxBullets": 6,
-		"bulletSpeed": 360.0,
-		"bulletDamage": -2,
-		"bulletLife": 1,
-		"bulletRange": 1.0,
-		"bulletSize": [ 10 ,10 ],
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "data/images/bullet.png",
-		"soundFile": "data/audio/shot.wav"
-	},
-	{
-		"name": "machinegun",
-		"fireRate": 0.15,
-		"reloadTime": 1.3,
-		"maxBullets": 20,
-		"bulletSpeed": 480.0,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 10 ,10 ],
-		"isAutomatic": true,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "data/images/bullet.png",
-		"soundFile": "data/audio/shot.wav"
-	},
-	{
-		"name": "shotgun",
-		"fireRate": 0.2,
-		"reloadTime": 0.8,
-		"maxBullets": 2,
-		"bulletSpeed": 240.0,
-		"bulletDamage": -1,
-		"bulletLife": -1,
-		"bulletRange": 0.6,
-		"bulletSize": [ 10 ,10 ],
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": true,
-		"imageFile": "data/images/shotgunBullet.png",
-		"soundFile": "data/audio/shotgun.wav"
-	},
-	{
-		"name": "mines",
-		"fireRate": -1,
-		"reloadTime": 2.0,
-		"maxBullets": 1,
-		"bulletSpeed": 0.0,
-		"bulletDamage": 0,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 20 ,20 ],
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"imageFile": "data/images/mine.png",
-		"soundFile": "data/audio/mine.wav"
-	},
-	{
-		"name": "c4",
-		"fireRate": -1,
-		"reloadTime": 1.0,
-		"maxBullets": 1,
-		"bulletSpeed": 0.0,
-		"bulletDamage": 0,
-		"bulletLife": -1,
-		"bulletRange": -1,
-		"bulletSize": [ 20 ,20 ],
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"imageFile": "data/images/c4.png",
-		"soundFile": "data/audio/mine.wav"
-	},
-	{
-		"name": "rocket launcher",
-		"fireRate": -1,
-		"reloadTime": 1.5,
-		"maxBullets": 1,
-		"bulletSpeed": 300.0,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 15 ,15 ],
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"imageFile": "data/images/rocket.png",
-		"soundFile": "data/audio/rocketlauncher.wav"
-	},
-	{
-		"name": "nuclear bomb",
-		"fireRate": -1,
-		"reloadTime": 0,
-		"maxBullets": 1,
-		"bulletSpeed": 0.0,
-		"bulletDamage": 0,
-		"bulletLife": 0,
-		"bulletRange": -1,
-		"bulletSize": [ 0 ,0 ],
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "",
-		"soundFile": ""
-	},
-	{
-		"name": "enemy weapon",
-		"fireRate": -1,
-		"reloadTime": -1,
-		"maxBullets": -1,
-		"bulletSpeed": 360.0,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 10 ,10 ],
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "data/images/bullet.png",
-		"soundFile": ""
-	},
-	{
-		"name": "boss weapon1",
-		"fireRate": -1,
-		"reloadTime": -1,
-		"maxBullets": -1,
-		"bulletSpeed": 300.0,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 10 ,10 ],
-		"bulletsPerShot": 3,
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "data/images/bullet.png",
-		"soundFile": ""
-	},
-	{
-		"name": "boss weapon2",
-		"fireRate": -1,
-		"reloadTime": -1,
-		"maxBullets": -1,
-		"bulletSpeed": 480.0,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": -1,
-		"bulletSize": [ 10 ,10 ],
-		"bulletsPerShot": 10,
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"imageFile": "data/images/bullet.png",
-		"soundFile": ""
-	}
-	],
-	"enemies": [
-	{
-		"type": "melee",
-		"life": 1,
-		"invencibleTime": 0.0,
-		"speed": 180.0,
-		"collisionDamage": -1,
-		"size": [ 25 ,25 ],
-		"imageFile": "data/images/enemy.png",
-		"behaviorTree": "data/bt/melee_bt.xml"
-	},
-	{
-		"type": "big",
-		"life": 4,
-		"invencibleTime": 0.0,
-		"speed": 120.0,
-		"collisionDamage": -2,
-		"size": [ 35 ,35 ],
-		"imageFile": "data/images/bigEnemy.png",
-		"behaviorTree": "data/bt/melee_bt.xml"
-	},
-	{
-		"type": "range",
-		"life": 1,
-		"invencibleTime": 0.0,
-		"speed": 200.0,
-		"collisionDamage": -1,
-		"weapon": "enemy weapon",
-		"size": [ 40 ,40 ],
-		"imageFile": "data/images/rangeEnemy.png",
-		"behaviorTree": "data/bt/range_bt.xml"
-	},
-	{
-		"type": "turret",
-		"life": 3,
-		"invencibleTime": 0.0,
-		"speed": 120.0,
-		"collisionDamage": -1,
-		"weapon": "enemy weapon",
-		"size": [ 25 ,25 ],
-		"imageFile": "data/images/turret.png",
-		"behaviorTree": "data/bt/turret_bt.xml"
-	}
-	,
-	{
-		"type": "boss",
-		"life": 30,
-		"invencibleTime": 0.3,
-		"speed": 120.0,
-		"collisionDamage": -2,
-		"weapon": "boss weapon1",
-		"size": [ 90 ,74 ],
-		"imageFile": "data/images/boss.png",
-		"behaviorTree": "data/bt/boss_bt.xml"
-	}
-	],
-	"pickups": [ "revolver", "machinegun", "shotgun", "mines", "c4", "rocket launcher", "nuclear bomb" ]
+  "player": {
+    "invencibleTime": 0.5,
+    "speed": 300,
+    "size": [ 30, 25 ],
+    "imageFile": "data/images/player.png"
+  },
+  "pickup": {
+    "weapons": [ "revolver", "machinegun", "shotgun", "mines", "c4", "rocket launcher", "nuclear bomb" ],
+    "points": 10,
+    "size": [ 20, 20 ],
+    "imageFile": "data/images/crate.png"
+  },
+  "weapons": [
+    {
+      "name": "revolver",
+      "fireRate": 0.3,
+      "reloadTime": 1.0,
+      "maxBullets": 6,
+      "bulletSpeed": 360.0,
+      "bulletDamage": -2,
+      "bulletLife": 1,
+      "bulletRange": 1.0,
+      "bulletSize": [ 10, 10 ],
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "data/images/bullet.png",
+      "soundFile": "data/audio/shot.wav"
+    },
+    {
+      "name": "machinegun",
+      "fireRate": 0.15,
+      "reloadTime": 1.3,
+      "maxBullets": 20,
+      "bulletSpeed": 480.0,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 10, 10 ],
+      "isAutomatic": true,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "data/images/bullet.png",
+      "soundFile": "data/audio/shot.wav"
+    },
+    {
+      "name": "shotgun",
+      "fireRate": 0.2,
+      "reloadTime": 0.8,
+      "maxBullets": 2,
+      "bulletSpeed": 240.0,
+      "bulletDamage": -1,
+      "bulletLife": -1,
+      "bulletRange": 0.6,
+      "bulletSize": [ 10, 10 ],
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": true,
+      "imageFile": "data/images/shotgunBullet.png",
+      "soundFile": "data/audio/shotgun.wav"
+    },
+    {
+      "name": "mines",
+      "fireRate": -1,
+      "reloadTime": 2.0,
+      "maxBullets": 1,
+      "bulletSpeed": 0.0,
+      "bulletDamage": 0,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 20, 20 ],
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "imageFile": "data/images/mine.png",
+      "soundFile": "data/audio/mine.wav"
+    },
+    {
+      "name": "c4",
+      "fireRate": -1,
+      "reloadTime": 1.0,
+      "maxBullets": 1,
+      "bulletSpeed": 0.0,
+      "bulletDamage": 0,
+      "bulletLife": -1,
+      "bulletRange": -1,
+      "bulletSize": [ 20, 20 ],
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "imageFile": "data/images/c4.png",
+      "soundFile": "data/audio/mine.wav"
+    },
+    {
+      "name": "rocket launcher",
+      "fireRate": -1,
+      "reloadTime": 1.5,
+      "maxBullets": 1,
+      "bulletSpeed": 300.0,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 15, 15 ],
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "imageFile": "data/images/rocket.png",
+      "soundFile": "data/audio/rocketlauncher.wav"
+    },
+    {
+      "name": "nuclear bomb",
+      "fireRate": -1,
+      "reloadTime": 0,
+      "maxBullets": 1,
+      "bulletSpeed": 0.0,
+      "bulletDamage": 0,
+      "bulletLife": 0,
+      "bulletRange": -1,
+      "bulletSize": [ 0, 0 ],
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "",
+      "soundFile": ""
+    },
+    {
+      "name": "enemy weapon",
+      "fireRate": -1,
+      "reloadTime": -1,
+      "maxBullets": -1,
+      "bulletSpeed": 360.0,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 10, 10 ],
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "data/images/bullet.png",
+      "soundFile": ""
+    },
+    {
+      "name": "boss weapon1",
+      "fireRate": -1,
+      "reloadTime": -1,
+      "maxBullets": -1,
+      "bulletSpeed": 300.0,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 10, 10 ],
+      "bulletsPerShot": 3,
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "data/images/bullet.png",
+      "soundFile": ""
+    },
+    {
+      "name": "boss weapon2",
+      "fireRate": -1,
+      "reloadTime": -1,
+      "maxBullets": -1,
+      "bulletSpeed": 480.0,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": -1,
+      "bulletSize": [ 10, 10 ],
+      "bulletsPerShot": 10,
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "imageFile": "data/images/bullet.png",
+      "soundFile": ""
+    }
+  ],
+  "enemies": [
+    {
+      "type": "melee",
+      "life": 1,
+      "invencibleTime": 0.0,
+      "speed": 180.0,
+      "collisionDamage": -1,
+      "points": 1,
+      "size": [ 25, 25 ],
+      "imageFile": "data/images/enemy.png",
+      "behaviorTree": "data/bt/melee_bt.xml"
+    },
+    {
+      "type": "big",
+      "life": 4,
+      "invencibleTime": 0.0,
+      "speed": 120.0,
+      "collisionDamage": -2,
+      "points": 2,
+      "size": [ 35, 35 ],
+      "imageFile": "data/images/bigEnemy.png",
+      "behaviorTree": "data/bt/melee_bt.xml"
+    },
+    {
+      "type": "range",
+      "life": 1,
+      "invencibleTime": 0.0,
+      "speed": 200.0,
+      "collisionDamage": -1,
+      "points": 5,
+      "weapon": "enemy weapon",
+      "size": [ 40, 40 ],
+      "imageFile": "data/images/rangeEnemy.png",
+      "behaviorTree": "data/bt/range_bt.xml"
+    },
+    {
+      "type": "turret",
+      "life": 3,
+      "invencibleTime": 0.0,
+      "speed": 120.0,
+      "collisionDamage": -1,
+      "points": 3,
+      "weapon": "enemy weapon",
+      "size": [ 25, 25 ],
+      "imageFile": "data/images/turret.png",
+      "behaviorTree": "data/bt/turret_bt.xml"
+    },
+    {
+      "type": "boss",
+      "life": 30,
+      "invencibleTime": 0.3,
+      "speed": 120.0,
+      "collisionDamage": -2,
+      "points": 20,
+      "weapon": "boss weapon1",
+      "size": [ 90, 74 ],
+      "imageFile": "data/images/boss.png",
+      "behaviorTree": "data/bt/boss_bt.xml"
+    }
+  ]
 }
